--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 <h3>Heart</h3>
-<<<<<<< HEAD
-<img src="download.jpg" alt="D:\New folder (2)\kkkk">
+<img src="download.jpg" alt="D:\New folder (2)\Matlab\emadulbassar.github.io">
 <p>Chambers of the Heart
 The heart is a muscular organ about the size of a fist, located just behind and slightly left of the breastbone. The heart pumps blood through the network of arteries and veins called the cardiovascular system.
 
